--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "This is a website for Ristorante Con Fusion, for Coursera lession in angular_js",
   "main": "index.html",
   "scripts": {
-    "start": "npm run lite",
+    "start": "npm run watch:all",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
+    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
+    "clean": "rimraf dist",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin img/* -o dist/img",
+    "usemin": "usemin index.html -d dist -o dist/index.html --htmlmin true",
+    "build": "npm run clean && npm run imagemin && npm run copyfonts",
+    "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\" "
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
@@ -30,6 +38,13 @@
   },
   "homepage": "https://github.com/pramodacharya/angular_js#readme",
   "devDependencies": {
-    "lite-server": "^2.4.0"
+    "cssmin": "^0.4.3",
+    "htmlmin": "0.0.7",
+    "lite-server": "^2.4.0",
+    "node-sass": "^4.10.0",
+    "onchange": "^3.3.0",
+    "parallelshell": "^3.0.1",
+    "uglify-js": "^3.4.9",
+    "usemin-cli": "^0.5.1"
   }
 }
