--- a/ionic/conFusion/package.json
+++ b/ionic/conFusion/package.json
@@ -21,16 +21,24 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/email-composer": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.0.0",
+    "@ionic-native/social-sharing": "^5.0.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-app-event": "1.2.1",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-email": "1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^3.0.0",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "5.4.4",
+    "de.appplant.cordova.plugin.local-notification": "0.8.5",
+    "es6-promise-plugin": "4.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -50,7 +58,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "de.appplant.cordova.plugin.local-notification": {},
+      "cordova-plugin-email": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      }
     }
   }
 }
