--- a/ionic/conFusion/package.json
+++ b/ionic/conFusion/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/email-composer": "^5.0.0",
     "@ionic-native/local-notifications": "^5.0.0",
+    "@ionic-native/network": "^5.0.0",
     "@ionic-native/social-sharing": "^5.0.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
@@ -33,6 +34,7 @@
     "cordova-plugin-email": "1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^3.0.0",
+    "cordova-plugin-network-information": "2.0.1",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -63,7 +65,8 @@
       "cordova-plugin-email": {},
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      }
+      },
+      "cordova-plugin-network-information": {}
     }
   }
 }
